ephy-profile-utils: don't replace environment when spwaning ephy-profile-migrator

Instead, just append the new variable to the existing environment.

https://bugzilla.gnome.org/show_bug.cgi?id=683538